# FedLearning

./: .gitignore  README.md  Vision_Transformer_federated.ipynb  pyproject.toml  requirements.txt
src/: BreastMNIST.py  Main.py  SavingStrategy.py  analysis.py  chest_to_binary.py  continualUtils.py  dataPreparation.py  fedLearning.py  model_utils.py  models.py  sandbox.py  test.py
src/results/fedadam/: 1_Clients_5_Rounds_results.json  3_Clients_5_Rounds_results.json  5_Clients_5_Rounds_results.json  8_Clients_5_Rounds_results.json
src/results/fedavg/: 1_Clients_5_Rounds_results.json  3_Clients_5_Rounds_results.json  5_Clients_5_Rounds_results.json  8_Clients_5_Rounds_results.json
src/results/fedprox/: 1_Clients_5_Rounds_results.json  3_Clients_5_Rounds_results.json  5_Clients_5_Rounds_results.json  8_Clients_5_Rounds_results.json
src/results/fedtrimmedavg/: 1_Clients_5_Rounds_results.json  3_Clients_5_Rounds_results.json  5_Clients_5_Rounds_results.json  8_Clients_5_Rounds_results.json
src/results/fedyogi/: 2_Clients_5_Rounds_results.json  3_Clients_5_Rounds_results.json  5_Clients_5_Rounds_results.json  8_Clients_5_Rounds_results.json
